--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,24 @@
-Add list of requirements here
+certifi            2021.10.8
+charset-normalizer 2.0.12
+cycler             0.11.0
+fonttools          4.31.2
+idna               3.3
+kiwisolver         1.4.2
+matplotlib         3.5.1
+numpy              1.22.3
+packaging          21.3
+Pillow             9.1.0
+pip                22.0.4
+pyparsing          3.0.7
+pypng              0.0.21
+PyQt5              5.15.6
+PyQt5-Qt5          5.15.2
+PyQt5-sip          12.9.1
+python-dateutil    2.8.2
+requests           2.27.1
+setuptools         58.1.0
+six                1.16.0
+torch              1.11.0
+torchvision        0.12.0
+typing_extensions  4.1.1
+urllib3            1.26.9
